--- a/hugging-face-inference/package.json
+++ b/hugging-face-inference/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node index.js"
+    "dev": "node index.js",
+    "start": "node server.js",
+    "server": "node server.js"
   },
   "author": "hiteshrepo",
   "license": "ISC",
   "dependencies": {
-    "@huggingface/inference": "^3.9.2"
+    "@huggingface/inference": "^3.9.2",
+    "cors": "^2.8.5",
+    "express": "^5.1.0"
   },
   "type": "module"
 }
